Added links to each page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <body>
   <h1>Welcome to my homepage</h1>
-  <a href="/contact.html">About me</a>
+  <a href="/contact.html">Contact me</a>
+  <a href="/photo.html">Photo</a>
 
 </body>
 
