--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/src/style.css" />
   <title>Contact</title>
 </head>
 
 <body>
   <a href="/">Back to homepage</a>
+  <h1>Contact Me</h1>
+  <a href="mailto:stultzse@gmail.com" class="email-link">stultzse@gmail.com</a>
+
 </body>
 
 </html>
