--- a/photo.html
+++ b/photo.html
@@ -5,10 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/src/style.css" />
   <title>Photo</title>
 </head>
 
 <body>
+  <a href="/">Back to homepage</a>
 
 </body>
 
