Added text and photo to pages

--- a/index.html
+++ b/index.html
@@ -10,9 +10,16 @@
 </head>
 
 <body>
-  <h1>Welcome to my homepage</h1>
-  <a href="/contact.html">Contact me</a>
-  <a href="/photo.html">Photo</a>
+  <h1 class="title-heading">🥐Croissant🥐</h1>
+  <h2 class="sub-heading">The Best Food</h2>
+  <p>
+    Did you know: there is a wonderful café in Richmond, Virginia called Whisk that makes the best croissants?
+  </p>
+  <div class="container">
+    <a href="/">Homepage</a>
+    <a href="/contact.html">Contact me</a>
+    <a href="/photo.html">Photo</a>
+  </div>
 
 </body>
 
