--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,11 @@
 </head>
 
 <body>
-  <a href="/">Back to homepage</a>
+  <div class="container">
+    <a href="/">Back to homepage</a>
+    <a href="/contact.html">Contact me</a>
+    <a href="/photo.html">Photo</a>
+  </div>
   <h1>Contact Me</h1>
   <a href="mailto:stultzse@gmail.com" class="email-link">stultzse@gmail.com</a>
 
