--- a/photo.html
+++ b/photo.html
@@ -10,7 +10,14 @@
 </head>
 
 <body>
-  <a href="/">Back to homepage</a>
+  <div class="container">
+    <a href="/">Back to homepage</a>
+    <a href="/contact.html">Contact me</a>
+    <a href="/photo.html">Photo</a>
+  </div>
+  <img
+    src="https://images.getbento.com/accounts/09be38c2fa3917de7aeb23dc6f705841/media/images/41207Almond_Croissant.jpg?w=1800&fit=max&auto=compress,format&h=1800"
+    width="300" height="275" />
 
 </body>
 
