--- a/photo.html
+++ b/photo.html
@@ -6,18 +6,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/src/style.css" />
-  <title>Photo</title>
+  <title>Photo of croissant - RVA Croissant Lover</title>
 </head>
 
 <body>
   <div class="container">
     <a href="/">Back to homepage</a>
-    <a href="/contact.html">Contact me</a>
+    <a href="/contact.html" title="Email me about croissants">Contact me</a>
     <a href="/photo.html">Photo</a>
   </div>
   <img
     src="https://images.getbento.com/accounts/09be38c2fa3917de7aeb23dc6f705841/media/images/41207Almond_Croissant.jpg?w=1800&fit=max&auto=compress,format&h=1800"
-    width="300" height="275" />
+    alt="Whisk croissant" width="300" height="275" />
 
 </body>
 
