--- a/contact.html
+++ b/contact.html
@@ -6,14 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/src/style.css" />
-  <title>Contact</title>
+  <title>Croissant love communication - RVA Croissant Lover</title>
 </head>
 
 <body>
   <div class="container">
     <a href="/">Back to homepage</a>
     <a href="/contact.html">Contact me</a>
-    <a href="/photo.html">Photo</a>
+    <a href="/photo.html" title="Look at a croissant photo">Photo</a>
   </div>
   <h1>Contact Me</h1>
   <a href="mailto:stultzse@gmail.com" class="email-link">stultzse@gmail.com</a>
