--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="An ode to the best croissants in Richmond, VA, USA.">
   <link rel="stylesheet" href="/src/style.css" />
-  <title>Homepage</title>
+  <title>The best pastry ever - RVA Croissant Lover</title>
 </head>
 
 <body>
@@ -17,8 +18,8 @@
   </p>
   <div class="container">
     <a href="/">Homepage</a>
-    <a href="/contact.html">Contact me</a>
-    <a href="/photo.html">Photo</a>
+    <a href="/contact.html" title="Email me about croissants">Contact me</a>
+    <a href="/photo.html" title="Look at a croissant photo">Photo</a>
   </div>
 
 </body>
